--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     
+    <!-- Explicitly set favicon with absolute path -->
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" sizes="16x16" href="/favicon.ico" />
+    <link rel="icon" sizes="32x32" href="/favicon.ico" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
