--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0ea5e9" />
     <meta name="description" content="Task Manager - Productivity application for managing tasks with drag-and-drop functionality by Prem Thakur" />
-    
     <!-- PT Favicon - SVG only -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://prem-thakur1618.vercel.app/images/favicon.svg" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
